Name:		xournal-convert
Version:	0.0
Synopsis:	
Description: 	
License: 	BSD3
License-file:	LICENSE
Author:		Ian-Woo Kim
Maintainer: 	Ian-Woo Kim <ianwookim@gmail.com>
Build-Type: 	Simple
Cabal-Version:  >= 1.8
data-files:     
                template/*.html.st


Executable xournal-convert
  Main-is: xournal-convert.hs
  hs-source-dirs: exe
  ghc-options: 	-Wall -O2 -threaded -funbox-strict-fields -fno-warn-unused-do-bind
  ghc-prof-options: -caf-all -auto-all
  Build-Depends: 
                   base>4, mtl>2, directory, filepath,
                   cmdargs, xournal-convert

Library
  hs-source-dirs: lib
  ghc-options: 	-Wall -O2 -threaded -funbox-strict-fields -fno-warn-unused-do-bind
  ghc-prof-options: -caf-all -auto-all
  Build-Depends: 
                   base>4, mtl>2, directory, filepath,
                   cmdargs, 
                   HStringTemplateHelpersIW, HStringTemplate,
                   xournal-parser, xournal-render, 
                   cairo>=0.12.0
  Exposed-Modules: 
                   Application.XournalConvert.ProgType
                   Application.XournalConvert.Job
                   Application.XournalConvert.Command
  Other-Modules: 
                   Paths_xournal_convert
 
		 